--- a/src/main.css
+++ b/src/main.css
@@ -10,6 +10,8 @@ body {
   overflow: hidden;
 }
 
+/* game text */
+
 .hud-text {
   height: 100%;
   width: 100%;
@@ -37,4 +39,34 @@ body {
   z-index: 1;
   pointer-events: none;
   visibility: hidden;
+}
+
+/* loader */
+
+.loader {
+  border: 5px solid #f3f3f3;
+  border-top: 5px solid #3d3d3d;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 1s linear infinite;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 3;
+  background-color: black;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+/* black screen */
+.blackscreen {
+  z-index: 2;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: black;
 }
