--- a/src/main.css
+++ b/src/main.css
@@ -54,6 +54,7 @@ body {
   left: 48%;
   z-index: 3;
   background-color: black;
+  visibility: hidden;
 }
 
 @keyframes spin {
@@ -86,4 +87,27 @@ body {
 
 .fade-out {
   transition: opacity 1s ease-out;
+}
+
+/* Intro text */
+.intro-text {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  color: white;
+  font-size: 50px;
+  font-family: ZOMBIE, sans-serif;
+  z-index: 2;
+  pointer-events: none;
+  text-align: center;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-direction: column;
+
+  .subtitle {
+    font-size: 20px;
+    font-family: sans-serif;
+  }
 }
