--- a/src/main.css
+++ b/src/main.css
@@ -41,6 +41,26 @@ body {
   visibility: hidden;
 }
 
+.code-text {
+  height: 90%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  flex-direction: column;
+  position: absolute;
+  color: white;
+  font-size: 30px;
+  z-index: 1;
+  font-family: sans-serif;
+  visibility: hidden;
+}
+
+.code-input {
+  background-color: transparent;
+  outline-style: none;
+}
+
 /* loader */
 .loader {
   border: 5px solid #f3f3f3;
