--- a/src/main.css
+++ b/src/main.css
@@ -18,6 +18,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  text-align: center;
   position: absolute;
   color: white;
   font-size: 50px;
@@ -81,6 +82,7 @@ body {
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
@@ -93,6 +95,17 @@ body {
   width: 100%;
   height: 100%;
   background-color: black;
+}
+
+/* faded screen */
+.faded-screen {
+  visibility: hidden;
+  z-index: 2;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  opacity: 0.6;
 }
 
 /* damage effect */
@@ -129,5 +142,20 @@ body {
   .subtitle {
     font-size: 20px;
     font-family: sans-serif;
+  }
+}
+
+/* Imaged clues */
+.image-clues {
+  visibility: hidden;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  z-index: 3;
+
+  img {
+    margin: auto;
+    max-height: 95%;
   }
 }
