--- a/src/main.css
+++ b/src/main.css
@@ -24,7 +24,7 @@ body {
   z-index: 1;
   pointer-events: none;
   visibility: hidden;
-  font-family:'Franklin Gothic Medium', sans-serif;
+  font-family: 'Franklin Gothic Medium', sans-serif;
 }
 
 .hud-text {
@@ -52,7 +52,7 @@ body {
   position: absolute;
   color: white;
   font-size: 30px;
-  z-index: 1;
+  z-index: 2;
   pointer-events: none;
   visibility: hidden;
   font-family: sans-serif;
@@ -175,6 +175,7 @@ body {
     max-height: 95%;
   }
 }
+
 /* Dialogue Container styles */
 .dialogue-container {
   position: absolute;
@@ -182,7 +183,7 @@ body {
   left: 50%;
   transform: translateX(-50%);
   text-align: center;
-  z-index: 10;
+  z-index: 4;
 }
 
 .items-container {
@@ -195,7 +196,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 100; 
+  z-index: 1;
 }
 
 .items-image {
@@ -204,6 +205,7 @@ body {
   object-fit: contain;
   max-width: 100%;
   max-height: 100%;
+  z-index: 3;
 }
 
 .exit-button {
@@ -217,12 +219,11 @@ body {
   background-color: rgba(0, 0, 0, 0.7);
   padding: 10px 15px;
   border-radius: 5px;
-  z-index: 101;
+  z-index: 5;
 }
 
 .character-image {
-  width: 1000px;
-  height: auto;
+  max-height: 32rem;
   display: block;
   margin: 0 auto;
 }
@@ -242,7 +243,7 @@ body {
   bottom: 10px;
   right: 15px;
   font-size: 0.9em;
-  color: white; 
+  color: white;
   font-weight: bold;
   opacity: 0.8;
 }
@@ -255,7 +256,7 @@ body {
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(10px);
-  z-index: 9;
+  z-index: 1;
   display: none;
 }
 
@@ -279,7 +280,7 @@ body {
   color: white;
   font-size: 16px;
   font-weight: bold;
-  z-index: 11;
+  z-index: 4;
   display: none;
 }
 
@@ -293,5 +294,5 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 50;
+  z-index: 3;
 }
